Document all messages for SecurePoll
Bug: T151513
Change-Id: I36c18d259dd60104c3f7d9733fc0b721e45901eb

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -27,11 +27,16 @@
 	"securepoll": "Used in the following messages:\n* {{msg-mw|Securepoll-create-title}}\n* {{msg-mw|Securepoll-create-created}}\n* {{msg-mw|Securepoll-edit-title}}\n* {{msg-mw|Securepoll-edit-edited}}\n* {{msg-mw|Securepoll-votereligibility-saved}}\n* {{msg-mw|Securepoll-votereligibility-cleared}}",
 	"securepoll-desc": "{{desc|name=Secure Poll|url=https://www.mediawiki.org/wiki/Extension:SecurePoll}}",
 	"securepoll-invalid-page": "Used as error message. Parameters:\n* $1 - subpage name",
+	"securepoll-need-admin": "Used as error message.",
+	"securepoll-too-few-params": "Used as error message.",
 	"securepoll-invalid-election": "Used as error message. Parameters:\n* $1 - invalid election ID",
 	"securepoll-welcome": "Used as welcome message for remote voters. Parameters:\n* $1 - username of remote voter\n{{Identical|Welcome}}",
 	"securepoll-not-started": "Parameters:\n* $1 - (Unused)\n* $2 - the date of it\n* $3 - its time",
 	"securepoll-already-started": "Parameters:\n* $1 - (Unused)\n* $2 - the date of it\n* $3 - its time",
+	"securepoll-finished": "Used as error message.",
 	"securepoll-not-qualified": "Unused at this time. Paramters:\n* $1 - ...",
+	"securepoll-change-disallowed": "Used as error message.",
+	"securepoll-change-allowed": "Used as error message.",
 	"securepoll-submit": "{{Identical|Submit}}",
 	"securepoll-gpg-receipt": "Parameters:\n* $1 - the receipt. Format: \"SPID: (10-digit vote ID)\\n(encrypted vote record)\"\nIf the election doesn't use encryption, the following message is used:\n* {{msg-mw|securepoll-thanks}}",
 	"securepoll-thanks": "If the election use encryption, the following message is used:\n* {{msg-mw|Securepoll-gpg-receipt}}",
@@ -42,11 +47,26 @@
 	"securepoll-full-gpg-error": "GPG stands for [[w:GNU_Privacy_Guard|GNU Privacy Guard]].\n\nParameters:\n* $1 - command line\n* $2 - error message",
 	"securepoll-gpg-config-error": "GPG stands for [[w:GNU_Privacy_Guard|GNU Privacy Guard]].",
 	"securepoll-gpg-parse-error": "GPG stands for [[w:GNU_Privacy_Guard|GNU Privacy Guard]].",
+	"securepoll-no-decryption-key": "Used as error message.",
+	"securepoll-jump": "Label of the button than sends the user to the voting wiki.",
+	"securepoll-no-decryption-key": "Used as error message.",
 	"securepoll-bad-ballot-submission": "Unused at this time. Parameters:\n* $1 - ...",
+	"securepoll-unanswered-questions": "Used as error message.",
+	"securepoll-invalid-rank": "Used as error message.",
+	"securepoll-unranked-options": "Used as error message.",
 	"securepoll-invalid-score": "Used as error message. Parameters:\n* $1 - minimum score\n* $2 - maximum score",
+	"securepoll-unanswered-options": "Used as error message.",
+	"securepoll-remote-auth-error": "Used as error message.",
+	"securepoll-remote-parse-error": "Used as error message.",
+	"securepoll-api-invalid-params": "Used as error message.",
+	"securepoll-api-no-user": "Used as error message.",
+	"securepoll-api-token-mismatch": "Used as error message.",
+	"securepoll-not-logged-in": "Used as error message.",
 	"securepoll-too-few-edits": "Used as error message. Parameters:\n* $1 - minimum number of edits\n* $2 - number of edits",
 	"securepoll-too-new": "Parameters:\n* $1 - the required registration date\n* $2 - the actual registration date\n* $3 - the required registration time\n* $4 - the actual registration time",
+	"securepoll-blocked": "Used as error message.",
 	"securepoll-blocked-centrally": "Used as error message. Parameters\n* $1 - number of wikis",
+	"securepoll-bot": "Used as error message.",
 	"securepoll-not-in-group": "Used as error message. Parameters:\n* $1 - name of MediaWiki group which voters need to be in",
 	"securepoll-not-in-list": "Used as error message.",
 	"securepoll-in-exclude-list": "Used as error message.",
@@ -68,13 +88,17 @@
 	"securepoll-strike-reason": "{{Identical|Reason}}",
 	"securepoll-strike-cancel": "{{Identical|Cancel}}",
 	"securepoll-strike-error": "Used as error message. Parameters:\n* $1 - error message",
+	"securepoll-strike-token-mismatch": "Used as error message.",
 	"securepoll-details-link": "{{Identical|Detail}}",
 	"securepoll-voter-name-local": "{{notranslate}}\nParameters:\n* $1 - username\nSee also:\n* {{msg-mw|Securepoll-voter-name-remote}} - for remote user",
 	"securepoll-voter-name-remote": "{{notranslate}}\nParameters:\n* $1 - username\nSee also:\n* {{msg-mw|Securepoll-voter-name-local}} - for local user",
 	"securepoll-details-title": "Used as page title. Parameters:\n* $1 - vote ID; identifies a single vote of a single voter",
 	"securepoll-invalid-vote": "The vote ID identifies a specific voting process. Parameters:\n* $1 - vote ID",
 	"securepoll-header-id": "{{optional}}\n{{Identical|ID}}",
+	"securepoll-header-voter-type": "Used as section header.",
 	"securepoll-header-url": "{{optional}}\n{{Identical|URL}}",
+	"securepoll-voter-properties": "Used as section header.",
+	"securepoll-strike-log": "Used as section header.",
 	"securepoll-header-action": "{{Identical|Action}}",
 	"securepoll-header-reason": "{{Identical|Reason}}",
 	"securepoll-header-admin": "{{Identical|Admin}}",
@@ -93,6 +117,7 @@
 	"securepoll-submit-translate": "{{Identical|Update}}",
 	"securepoll-language-label": "{{Identical|Select language}}",
 	"securepoll-submit-select-lang": "{{Identical|Translate}}",
+	"securepoll-entry-text": "Intro text on top of Special:SecurePoll above the table that lists all polls.",
 	"securepoll-entry-createpoll": "Label for the \"create a new poll\" link on Special:SecurePoll.",
 	"securepoll-header-title": "{{Identical|Name}}",
 	"securepoll-header-start-date": "{{Identical|Start date}}",
@@ -105,7 +130,21 @@
 	"securepoll-subpage-dump": "Link text to a sub page in the SecurePoll extension where users can dump results.\n{{Identical|Dump}}",
 	"securepoll-subpage-tally": "Link text to a sub page in the SecurePoll extension where users can tally.\n{{Identical|Tally}}",
 	"securepoll-tally-title": "Used as page title. Parameters:\n* $1 - title of the election, or the string \"[title]\"\n{{Identical|Tally}}",
+	"securepoll-tally-not-finished": "Used as error message.",
+	"securepoll-can-decrypt": "Used as informational message.",
+	"securepoll-tally-no-key": "Used as error message.",
+	"securepoll-tally-local-legend": "Used as section header.",
+	"securepoll-tally-local-submit": "Label for the tally button. {{Identical|Create tally}}",
+	"securepoll-tally-upload-legend": "Used as section header.",
+	"securepoll-tally-upload-submit": "Label for the tally button. {{Identical|Create tally}}",
+	"securepoll-tally-error": "Used as error message.",
+	"securepoll-no-upload": "Used as error message.",
+	"securepoll-dump-corrupt": "Used as error message.",
 	"securepoll-tally-upload-error": "Used as error message. Parameters:\n* $1 - error message",
+	"securepoll-pairwise-victories": "Used as section header.",
+	"securepoll-strength-matrix": "Used as section header.",
+	"securepoll-ranks": "Used as section header.",
+	"securepoll-average-score": "Used as section header.",
 	"securepoll-round": "Column header for tables on tallies which take place over multiple rounds.\n\nParameters:\n* $1 - roman numeral (I, II, III, IV, ...)",
 	"securepoll-spoilt": "Row label for counting ballots which were spoilt, that is not correctly filled in or indecipherable.",
 	"securepoll-exhausted": "Row label for counting ballots which have been exhausted in a multi-round counting system",
