--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -265,6 +265,7 @@
 	"securepoll-voter-stats": "Explanation of the unique number of voters who participated in the election; shown above the vote list.",
 	"securepoll-vote-stats": "Explanation of the total number of votes cast, as well as the number that were excluded because the voter had voted again, and the number that have been struck by an election admin; shown above the vote list.",
 	"apihelp-strikevote-description": "{{doc-apihelp-description|strikevote}}",
+	"apihelp-strikevote-summary": "{{doc-apihelp-summary|strikevote}}",
 	"apihelp-strikevote-param-option": "{{doc-apihelp-param|strikevote|option}}",
 	"apihelp-strikevote-paramvalue-option-strike": "{{doc-apihelp-paramvalue|strikevote|option|strike}}",
 	"apihelp-strikevote-paramvalue-option-unstrike": "{{doc-apihelp-paramvalue|strikevote|option|unstrike}}",
