--- a/i18n/api/qqq.json
+++ b/i18n/api/qqq.json
@@ -33,5 +33,9 @@
 	"apihelp-strikevote-example-strike": "{{doc-apihelp-example|strikevote}}",
 	"apihelp-strikevote-example-unstrike": "{{doc-apihelp-example|strikevote}}",
 	"apierror-securepoll-mustbeloggedin-strikevote": "{{doc-apierror}}",
-	"apierror-securepoll-badvoteid": "{{doc-apierror}}\n\nParameters:\n* $1 - Supplied vote id"
+	"apierror-securepoll-badvoteid": "{{doc-apierror}}\n\nParameters:\n* $1 - Supplied vote id",
+	"apihelp-securepollauth-summary": "{{doc-apihelp-summary|securepollauth}}",
+	"apihelp-securepollauth-param-token": "{{doc-apihelp-param|securepollauth|token}}",
+	"apihelp-securepollauth-param-id": "{{doc-apihelp-param|securepollauth|id}}",
+	"apihelp-securepollauth-example-auth": "{{doc-apihelp-example|securepollauth}}"
 }
