Split apihelp messages to a separate file
Bug: T189982
Change-Id: I66ecff5b223b607617c8a7df05f68e807d5c46c6

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -243,16 +243,5 @@
 	"action-securepoll-create-poll": "create polls",
 	"securepoll-ns-readonly": "The {{ns:SecurePoll}} namespace is read-only",
 	"securepoll-voter-stats": "Out of all eligible voters, $1 {{PLURAL:$1|voter has|voters have}} voted.",
-	"securepoll-vote-stats": "A total of $1 {{PLURAL:$1|vote has|votes have}} been cast. Of these, $2 {{PLURAL:$2|is|are}} thrown away because the voter has voted again, and $3 {{PLURAL:$3|is|are}} struck.",
-	"apihelp-strikevote-description": "Allows admins to strike or unstrike a vote.",
-	"apihelp-strikevote-summary": "Allows admins to strike or unstrike a vote.",
-	"apihelp-strikevote-param-option": "Which action to take: strike or unstrike a vote.",
-	"apihelp-strikevote-paramvalue-option-strike": "Strike a vote (remove it from the count).",
-	"apihelp-strikevote-paramvalue-option-unstrike": "Unstrike a vote (restore it to the count).",
-	"apihelp-strikevote-param-voteid": "The ID of the vote to be struck or unstruck.",
-	"apihelp-strikevote-param-reason": "The reason for striking or unstriking the vote.",
-	"apihelp-strikevote-example-strike": "Strike vote <kbd>1</kbd>, giving the reason <kbd>duplication</kbd>.",
-	"apihelp-strikevote-example-unstrike": "Unstrike vote <kbd>1</kbd>, giving the reason <kbd>mistake</kbd>.",
-	"apierror-securepoll-mustbeloggedin-strikevote": "You must be logged in to strike or unstrike a vote.",
-	"apierror-securepoll-badvoteid": "<kbd>$1</kbd> is not a valid vote id."
+	"securepoll-vote-stats": "A total of $1 {{PLURAL:$1|vote has|votes have}} been cast. Of these, $2 {{PLURAL:$2|is|are}} thrown away because the voter has voted again, and $3 {{PLURAL:$3|is|are}} struck."
 }
