Truncate the vote timestamp in the non-admin vote list
Bug: T268794
Change-Id: If8e15eb8ce9ec652c06816cbff52bb084fd50e73
(cherry picked from commit 669d16834146e764b87ec79381ad0aa1e046daf2)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -53,6 +53,7 @@
 	"securepoll-list-title": "List votes: $1",
 	"securepoll-list-private": "Sorry, viewing the list of voters for this election is restricted to election administrators.",
 	"securepoll-header-timestamp": "Time",
+	"securepoll-header-date": "Date",
 	"securepoll-header-voter-name": "Name",
 	"securepoll-header-voter-domain": "Domain",
 	"securepoll-header-ip": "IP",
