Fix capitalisation in message documentation
Change-Id: I0723ce792c6e686193dfb6e5125d7bd02257b688

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -147,7 +147,7 @@
 	"securepoll-strength-matrix": "Used as section header.",
 	"securepoll-ranks": "Used as section header.",
 	"securepoll-average-score": "Used as section header.",
-	"securepoll-round": "Column header for tables on tallies which take place over multiple rounds.\n\nParameters:\n* $1 - roman numeral (I, II, III, IV, ...)",
+	"securepoll-round": "Column header for tables on tallies which take place over multiple rounds.\n\nParameters:\n* $1 - Roman numeral (I, II, III, IV, ...)",
 	"securepoll-spoilt": "Row label for counting ballots which were spoilt, that is not correctly filled in or indecipherable.",
 	"securepoll-exhausted": "Row label for counting ballots which have been exhausted in a multi-round counting system",
 	"securepoll-htmlform-daterange-end-before-start": "Used as error message in HTML forms.",
