Update admin selection input for SecurePoll create/edit
Use UsersMultiselectWidget to set election admins and
validate that users are members of the electionadmin group

Bug: T270634
Bug: T271327
Change-Id: I4b6e1064b11b2d5b3517e86088de3c9983aa3d92

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -182,8 +182,7 @@
 	"securepoll-create-option-election_crypt-none": "No encryption",
 	"securepoll-create-option-election_crypt-gpg": "GPG",
 	"securepoll-create-label-comment": "Reason",
-	"securepoll-create-invalid-username": "The specified user name is not valid",
-	"securepoll-create-user-does-not-exist": "The specified user does not exist",
+	"securepoll-create-user-not-in-electionadmin-group": "\"$1\" is not a member of the electionadmin group.",
 	"securepoll-create-fail-bad-id": "The submitted election ID does not match the election being edited",
 	"securepoll-create-fail-id-missing": "The election being edited no longer exists",
 	"securepoll-create-fail-bad-dblist": "The specified wiki or wiki list is not valid",
