--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -204,8 +204,7 @@
 	"securepoll-create-option-election_crypt-none": "Label for form option on Special:SecurePoll/create.",
 	"securepoll-create-option-election_crypt-gpg": "{{optional}}\nLabel for form option on Special:SecurePoll/create.",
 	"securepoll-create-label-comment": "Label for the \"edit summary\" field on Special:SecurePoll/create.\n{{Identical|Reason}}",
-	"securepoll-create-invalid-username": "Used as error message in Special:SecurePoll/create.",
-	"securepoll-create-user-does-not-exist": "Used as error message in Special:SecurePoll/create.",
+	"securepoll-create-user-not-in-electionadmin-group": "Used as an error message when trying to add an admin who is not a member of the electionadmin group. Parameters:\n* $1 - username of the admin",
 	"securepoll-create-fail-bad-id": "Used as error message in Special:SecurePoll/create.",
 	"securepoll-create-fail-id-missing": "Used as error message in Special:SecurePoll/create.",
 	"securepoll-create-fail-bad-dblist": "Used as error message in Special:SecurePoll/create.",
