--- a/i18n/en.json
+++ b/i18n/en.json
@@ -111,12 +111,12 @@
 	"securepoll-subpage-tally": "Tally",
 	"securepoll-tally-title": "Tally: $1",
 	"securepoll-tally-not-finished": "Sorry, you cannot tally the election until after voting is complete.",
-	"securepoll-can-decrypt": "The election record has been encrypted, but the decryption key is available. \n\tYou can choose to either tally the results present in the database, or to tally encrypted results from an uploaded file.",
-	"securepoll-tally-no-key": "You cannot tally this election, because the votes are encrypted, and the decryption key is not available.",
+	"securepoll-can-decrypt": "The election record has been encrypted. You can choose to either tally the results present in the database, or to tally encrypted results from an uploaded file.",
 	"securepoll-tally-local-legend": "Tally stored results",
 	"securepoll-tally-local-submit": "Create tally",
 	"securepoll-tally-upload-legend": "Upload encrypted dump",
 	"securepoll-tally-upload-submit": "Create tally",
+	"securepoll-tally-gpg-decrypt-key": "GPG decryption key",
 	"securepoll-tally-error": "Error interpreting vote record, cannot produce a tally.",
 	"securepoll-no-upload": "No file was uploaded, cannot tally results.",
 	"securepoll-dump-corrupt": "The dump file is corrupt and cannot be processed.",
