Add type filter to Special:SecurePollLog page
Allow filtering the log by type of admin action. This commit:
* Unhides the filter form
* Sets the form method to GET so that the pager can work properly
* Adds a form field for the type of admin action
* Adds the filter as a condition to the pager's query
* Displays the filled form and pager results if successful

Bug: T273926
Change-Id: Iee310abc9e935b77d4854cf31590bc58026bb32f

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -245,6 +245,9 @@
 	"securepoll-voter-stats": "Out of all eligible voters, $1 {{PLURAL:$1|voter has|voters have}} voted.",
 	"securepoll-vote-stats": "A total of $1 {{PLURAL:$1|vote has|votes have}} been cast. Of these, $2 {{PLURAL:$2|is|are}} thrown away because the voter has voted again, and $3 {{PLURAL:$3|is|are}} struck.",
 	"securepolllog": "SecurePoll Log",
+	"securepolllog-form-type-option-all": "All SecurePoll logs",
+	"securepolllog-form-type-option-voter": "Voter log",
+	"securepolllog-form-type-option-admin": "Admin log",
 	"securepoll-log-action-type-0": "$1, $2 added $4 to the poll admins for the election <em>$3</em>.",
 	"securepoll-log-action-type-1": "$1, $2 removed $4 from the poll admins for the election <em>$3</em>.",
 	"securepoll-log-action-type-2": "$1, $2 viewed voter data for the election <em>$3</em>.",
