Add target filter to Special:SecurePollLog page
Allow filtering the log entries by target. Also ensure the target
field is enabled or disabled depending on the value of the type
field.

Bug: T273931
Change-Id: I32f7c6d7344122dd3ed85edd145918aa8a0d025b

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -270,6 +270,7 @@
 	"securepolllog-form-type-option-all": "Label for a dropdown option in [[Special:SecurePollLog]]",
 	"securepolllog-form-type-option-voter": "Label for a dropdown option in [[Special:SecurePollLog]]",
 	"securepolllog-form-type-option-admin": "Label for a dropdown option in [[Special:SecurePollLog]]",
+	"securepolllog-form-target-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepoll-log-action-type-0": "Log entry for an admin action in [[Special:SecurePollLog]].\n\nParameters:\n* $1 - formatted timestamp when the action was performed\n* $2 - username of the admin who performed the action\n* $3 - title of the poll\n* $4 - username of the admin who was added to the election",
 	"securepoll-log-action-type-1": "Log entry for an admin action in [[Special:SecurePollLog]].\n\nParameters:\n* $1 - formatted timestamp when the action was performed\n* $2 - username of the admin who performed the action\n* $3 - title of the poll\n* $4 - username of the admin who was removed from the election",
 	"securepoll-log-action-type-2": "Log entry for an admin action in [[Special:SecurePollLog]].\n\nParameters:\n* $1 - formatted timestamp when the action was performed\n* $2 - username of the admin who performed the action\n* $3 - title of the poll",
