--- a/i18n/en.json
+++ b/i18n/en.json
@@ -248,6 +248,7 @@
 	"securepolllog-form-type-option-all": "All SecurePoll logs",
 	"securepolllog-form-type-option-voter": "Voter log",
 	"securepolllog-form-type-option-admin": "Admin log",
+	"securepolllog-form-target-label": "Target (username):",
 	"securepoll-log-action-type-0": "$1, $2 added $4 to the poll admins for the election <em>$3</em>.",
 	"securepoll-log-action-type-1": "$1, $2 removed $4 from the poll admins for the election <em>$3</em>.",
 	"securepoll-log-action-type-2": "$1, $2 viewed voter data for the election <em>$3</em>.",
