--- a/i18n/en.json
+++ b/i18n/en.json
@@ -248,6 +248,7 @@
 	"securepolllog-form-type-option-all": "All SecurePoll logs",
 	"securepolllog-form-type-option-voter": "Voter log",
 	"securepolllog-form-type-option-admin": "Admin log",
+	"securepolllog-form-performer-label": "Performer (username):",
 	"securepolllog-form-target-label": "Target (username):",
 	"securepolllog-form-electionname-label": "Election (title):",
 	"securepolllog-election-does-not-exist": "Election not found",
