--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -270,6 +270,7 @@
 	"securepolllog-form-type-option-all": "Label for a dropdown option in [[Special:SecurePollLog]]",
 	"securepolllog-form-type-option-voter": "Label for a dropdown option in [[Special:SecurePollLog]]",
 	"securepolllog-form-type-option-admin": "Label for a dropdown option in [[Special:SecurePollLog]]",
+	"securepolllog-form-performer-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepolllog-form-target-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepolllog-form-electionname-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepolllog-election-does-not-exist": "Error message for when a requested election does not exist",
