--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -274,6 +274,7 @@
 	"securepolllog-form-target-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepolllog-form-electionname-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepolllog-election-does-not-exist": "Error message for when a requested election does not exist",
+	"securepolllog-form-date-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepoll-log-action-type-0": "Log entry for an admin action in [[Special:SecurePollLog]].\n\nParameters:\n* $1 - formatted timestamp when the action was performed\n* $2 - username of the admin who performed the action\n* $3 - title of the poll\n* $4 - username of the admin who was added to the election",
 	"securepoll-log-action-type-1": "Log entry for an admin action in [[Special:SecurePollLog]].\n\nParameters:\n* $1 - formatted timestamp when the action was performed\n* $2 - username of the admin who performed the action\n* $3 - title of the poll\n* $4 - username of the admin who was removed from the election",
 	"securepoll-log-action-type-2": "Log entry for an admin action in [[Special:SecurePollLog]].\n\nParameters:\n* $1 - formatted timestamp when the action was performed\n* $2 - username of the admin who performed the action\n* $3 - title of the poll",
