Add action type filter to Special:SecurePollLog page
Bug: T273976
Change-Id: Ibca306b3666f4f3d1a0664cd1ac04dc0d0993980

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -270,6 +270,10 @@
 	"securepolllog-form-performer-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepolllog-form-target-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepolllog-form-electionname-label": "Label for a field in [[Special:SecurePollLog]]",
+	"securepolllog-form-action-label": "Label for a field in [[Special:SecurePollLog]]",
+	"securepolllog-form-action-option-addadmin": "Label for a field in [[Special:SecurePollLog]]",
+	"securepolllog-form-action-option-removeadmin": "Label for a field in [[Special:SecurePollLog]]",
+	"securepolllog-form-action-option-both": "Label for a field in [[Special:SecurePollLog]], see also {{msg-mw|securepolllog-form-action-option-addadmin}} and {{msg-mw|securepolllog-form-action-option-removeadmin}}",
 	"securepolllog-election-does-not-exist": "Error message for when a requested election does not exist",
 	"securepolllog-form-date-label": "Label for a field in [[Special:SecurePollLog]]",
 	"securepoll-log-action-type-0": "Log entry for an admin action in [[Special:SecurePollLog]].\n\nParameters:\n* $1 - formatted timestamp when the action was performed\n* $2 - username of the admin who performed the action\n* $3 - title of the poll\n* $4 - username of the admin who was added to the election",
