--- a/i18n/en.json
+++ b/i18n/en.json
@@ -247,6 +247,10 @@
 	"securepolllog-form-type-option-admin": "Admin log",
 	"securepolllog-form-performer-label": "Performer (username):",
 	"securepolllog-form-target-label": "Target (username):",
+	"securepolllog-form-action-label": "Action type:",
+	"securepolllog-form-action-option-addadmin": "Admin added",
+	"securepolllog-form-action-option-removeadmin": "Admin removed",
+	"securepolllog-form-action-option-both": "Both",
 	"securepolllog-form-electionname-label": "Election (title):",
 	"securepolllog-election-does-not-exist": "Election not found",
 	"securepolllog-form-date-label": "From date (and earlier):",
