Combine the two TallyPage forms into one form
If an election is encrypted, show one form with an optional file
input, rather than two forms (one with no file input and one with a
mandatory file input).

Remove the extra handling for two forms, and associated messages.

Preserve the existing functionality:
* If an election is not encrypted, only have a submit button
* If an election is encrypted, but additional info is needed to
  decrypt it, add extra fields depending on the encryption method

Finally, remove the help text at the top of the form and replace it
with some help text for the file input.

Bug: T272916
Change-Id: I1e184dcccc9fd815c307aa090e04e7bd73d6521e

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -111,10 +111,7 @@
 	"securepoll-subpage-tally": "Tally",
 	"securepoll-tally-title": "Tally: $1",
 	"securepoll-tally-not-finished": "Sorry, you cannot tally the election until after voting is complete.",
-	"securepoll-can-decrypt": "The election record has been encrypted. You can choose to either tally the results present in the database, or to tally encrypted results from an uploaded file.",
-	"securepoll-tally-local-legend": "Tally stored results",
-	"securepoll-tally-local-submit": "Create tally",
-	"securepoll-tally-upload-legend": "Upload encrypted dump",
+	"securepoll-tally-form-file-help": "If you upload an encrypted dump, its contents will be tallied. Otherwise the results in the database will be tallied.",
 	"securepoll-tally-upload-submit": "Create tally",
 	"securepoll-tally-gpg-decrypt-key": "GPG decryption key",
 	"securepoll-tally-error": "Error interpreting vote record, cannot produce a tally.",
