--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -133,10 +133,7 @@
 	"securepoll-subpage-tally": "Link text to a sub page in the SecurePoll extension where users can tally.\n{{Identical|Tally}}",
 	"securepoll-tally-title": "Used as page title. Parameters:\n* $1 - title of the election, or the string \"[title]\"\n{{Identical|Tally}}",
 	"securepoll-tally-not-finished": "Used as error message.",
-	"securepoll-can-decrypt": "Used as informational message.",
-	"securepoll-tally-local-legend": "Used as section header.",
-	"securepoll-tally-local-submit": "Label for the tally button. {{Identical|Create tally}}",
-	"securepoll-tally-upload-legend": "Used as section header.",
+	"securepoll-tally-form-file-help": "Used as help text for a form field.",
 	"securepoll-tally-upload-submit": "Label for the tally button. {{Identical|Create tally}}",
 	"securepoll-tally-gpg-decrypt-key": "Label for the GPG decryption key input.",
 	"securepoll-tally-error": "Used as error message.",
