--- a/i18n/en.json
+++ b/i18n/en.json
@@ -179,7 +179,7 @@
 	"securepoll-create-option-election_crypt-none": "No encryption",
 	"securepoll-create-option-election_crypt-gpg": "GPG",
 	"securepoll-create-label-comment": "Reason",
-	"securepoll-create-user-not-in-electionadmin-group": "\"$1\" is not a member of the electionadmin group.",
+	"securepoll-create-user-not-in-electionadmin-group": "\"$1\" is not a {{GENDER:$1|member}} of the electionadmin group.",
 	"securepoll-create-fail-bad-id": "The submitted election ID does not match the election being edited",
 	"securepoll-create-fail-id-missing": "The election being edited no longer exists",
 	"securepoll-create-fail-bad-dblist": "The specified wiki or wiki list is not valid",
