Allow for blocking on partial blocks
* distinguish between the type of blocks to block on in VoterEligibility
* pass along the block status LocalAuth::getUserParams
* Check for eligibility in Election::getQualifiedStatus

Bug: T268800
Change-Id: Ic2229f8807eaeffc17280c117e2e9de61522a43d

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -67,6 +67,7 @@
 	"securepoll-too-few-edits": "Used as error message. Parameters:\n* $1 - minimum number of edits\n* $2 - number of edits",
 	"securepoll-too-new": "Parameters:\n* $1 - the required registration date\n* $2 - the actual registration date\n* $3 - the required registration time\n* $4 - the actual registration time",
 	"securepoll-blocked": "Used as error message.",
+	"securepoll-blocked-partial": "Used as error message.",
 	"securepoll-blocked-centrally": "Used as error message. Parameters\n* $1 - number of wikis",
 	"securepoll-bot": "Used as error message.",
 	"securepoll-not-in-group": "Used as error message. Parameters:\n* $1 - name of MediaWiki group which voters need to be in",
@@ -225,7 +226,8 @@
 	"securepoll-votereligibility-list-is-processing": "Used as an error message on Special:SecurePoll/votereligibility.",
 	"securepoll-votereligibility-label-min_edits": "Label for form field on Special:SecurePoll/votereligibility.",
 	"securepoll-votereligibility-label-max_registration": "Label for form field on Special:SecurePoll/votereligibility.",
-	"securepoll-votereligibility-label-not_blocked": "Label for form field on Special:SecurePoll/votereligibility.",
+	"securepoll-votereligibility-label-not_blocked_sitewide": "Label for type of block for form field on Special:SecurePoll/votereligibility",
+	"securepoll-votereligibility-label-not_blocked_partial": "Label for type of block for form field on Special:SecurePoll/votereligibility",
 	"securepoll-votereligibility-label-not_centrally_blocked": "Label for form field on Special:SecurePoll/votereligibility.",
 	"securepoll-votereligibility-label-central_block_threshold": "Label for form field on Special:SecurePoll/votereligibility.",
 	"securepoll-votereligibility-label-not_bot": "Label for form field on Special:SecurePoll/votereligibility.",
