--- a/i18n/en.json
+++ b/i18n/en.json
@@ -45,6 +45,7 @@
 	"securepoll-too-few-edits": "Sorry, you cannot vote. You need to have made at least $1 {{PLURAL:$1|edit|edits}} to vote in this election, you have made $2.",
 	"securepoll-too-new": "Sorry, you cannot vote. Your account needs to have been registered before $1 at $3 to vote in this election, you registered on $2 at $4.",
 	"securepoll-blocked": "Sorry, you cannot vote in this election if you are currently blocked from editing.",
+	"securepoll-blocked-partial": "Sorry, you cannot vote in this election if you are currently partially blocked from editing.",
 	"securepoll-blocked-centrally": "Sorry, you cannot vote in this election as you are blocked on at least $1 {{PLURAL:$1|wiki|wikis}}.",
 	"securepoll-bot": "Sorry, accounts with the bot flag are not allowed to vote in this election.",
 	"securepoll-not-in-group": "Only members of the \"$1\" group can vote in this election.",
@@ -203,7 +204,8 @@
 	"securepoll-votereligibility-list-is-processing": "The given voter eligibility list is being automatically populated, and cannot be edited now.",
 	"securepoll-votereligibility-label-min_edits": "Minimum edits:",
 	"securepoll-votereligibility-label-max_registration": "Registered before:",
-	"securepoll-votereligibility-label-not_blocked": "Must not be blocked",
+	"securepoll-votereligibility-label-not_blocked_sitewide": "Must not be sitewide blocked",
+	"securepoll-votereligibility-label-not_blocked_partial": "Must not be partial blocked",
 	"securepoll-votereligibility-label-not_centrally_blocked": "Must not be blocked on too many attached wikis",
 	"securepoll-votereligibility-label-central_block_threshold": "Central block threshold",
 	"securepoll-votereligibility-label-not_bot": "Must not be flagged as a bot",
