Add link to logs for elections on main SecurePoll page
Links on EntryPage.php are generated by looping through an array
that defines all the links and when they should appear and generating
urls based on the name passed through.

Given that the logs are on another SpecialPage, this patch:
* Adds 'log' to the array of links and specifies a function to run
* Adds a check for the 'link' key in the link definition when creating
the list of links and runs the function by name if the key is set
instead of the generic link generator

Bug: T275899
Change-Id: Idc198cdc0d5aafbdffe97a86de2b5c29029d661b

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -109,6 +109,7 @@
 	"securepoll-subpage-votereligibility": "Voter Eligibility",
 	"securepoll-subpage-dump": "Dump",
 	"securepoll-subpage-tally": "Tally",
+	"securepoll-subpage-log": "Logs",
 	"securepoll-tally-title": "Tally: $1",
 	"securepoll-tally-not-finished": "Sorry, you cannot tally the election until after voting is complete.",
 	"securepoll-tally-form-file-help": "If you upload an encrypted dump, its contents will be tallied. Otherwise the results in the database will be tallied.",
