--- a/i18n/en.json
+++ b/i18n/en.json
@@ -122,6 +122,9 @@
 	"securepoll-no-upload": "No file was uploaded, cannot tally results.",
 	"securepoll-dump-corrupt": "The dump file is corrupt and cannot be processed.",
 	"securepoll-tally-upload-error": "Error tallying dump file: $1",
+	"securepoll-tally-ongoing": "This election is currently being (re-)tallied. Please check back later for the results.",
+	"securepoll-tally-result-error": "Tally failed with error: $1",
+	"securepoll-tally-result": "<h2>Previous results</h2><p>$1</p><p>(Results from $2)</p>",
 	"securepoll-pairwise-victories": "Pairwise victory matrix",
 	"securepoll-strength-matrix": "Path strength matrix",
 	"securepoll-ranks": "Final ranking",
