--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -144,6 +144,9 @@
 	"securepoll-no-upload": "Used as error message.",
 	"securepoll-dump-corrupt": "Used as error message.",
 	"securepoll-tally-upload-error": "Used as error message. Parameters:\n* $1 - error message",
+	"securepoll-tally-ongoing": "Used on successful submission of the tally form for a large election that needs to be tallied via a job.",
+	"securepoll-tally-result-error": "Used as error message. Parameters:\n* $1 - error message",
+	"securepoll-tally-result": "Used in tally page if a tally has already been done. Parameters:\n* $1 - existing tally results\n* $2 - time the results were tallied",
 	"securepoll-pairwise-victories": "Used as section header.",
 	"securepoll-strength-matrix": "Used as section header.",
 	"securepoll-ranks": "Used as section header.",
