--- a/i18n/en.json
+++ b/i18n/en.json
@@ -239,7 +239,7 @@
 	"securepoll-votereligibility-cleared-text": "The $1 has been cleared and will not be used by the poll.",
 	"securepoll-votereligibility-cleared-comment": "$1 cleared.",
 	"right-securepoll-create-poll": "Create polls",
-	"action-securepoll-create-poll": "create polls",
+	"action-securepoll-create-poll": "create polls and view logs",
 	"securepoll-ns-readonly": "The {{ns:SecurePoll}} namespace is read-only",
 	"securepoll-voter-stats": "Out of all eligible voters, $1 {{PLURAL:$1|voter has|voters have}} voted.",
 	"securepoll-vote-stats": "A total of $1 {{PLURAL:$1|vote has|votes have}} been cast. Of these, $2 {{PLURAL:$2|is|are}} thrown away because the voter has voted again, and $3 {{PLURAL:$3|is|are}} struck.",
