--- a/i18n/en.json
+++ b/i18n/en.json
@@ -124,6 +124,7 @@
 	"securepoll-tally-upload-error": "Error tallying dump file: $1",
 	"securepoll-tally-ongoing": "This election is currently being (re-)tallied. Please check back later for the results.",
 	"securepoll-tally-result-error": "Tally failed with error: $1",
+	"securepoll-tally-timeout-warning": "If you uploaded an encrypted dump, its contents will be tallied. Otherwise the results in the database will be tallied. NOTE: Uploading an election with more than a 100 votes might not give any results and lead to a timeout.",
 	"securepoll-tally-result": "<h2>Previous results</h2><p>$1</p><p>(Results from $2)</p>",
 	"securepoll-pairwise-victories": "Pairwise victory matrix",
 	"securepoll-strength-matrix": "Path strength matrix",
