--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -147,6 +147,7 @@
 	"securepoll-tally-ongoing": "Used on successful submission of the tally form for a large election that needs to be tallied via a job.",
 	"securepoll-tally-result-error": "Used as error message. Parameters:\n* $1 - error message",
 	"securepoll-tally-result": "Used in tally page if a tally has already been done. Parameters:\n* $1 - existing tally results\n* $2 - time the results were tallied",
+	"securepoll-tally-timeout-warning": "Used as a warning message",
 	"securepoll-pairwise-victories": "Used as section header.",
 	"securepoll-strength-matrix": "Used as section header.",
 	"securepoll-ranks": "Used as section header.",
