Update helpline and grammar fix
Update warning message to appear on the helpline and fix grammar typo

Bug: T278322
Change-Id: I4397d466f155f376554b131d732f47d16469a214

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -113,7 +113,7 @@
 	"securepoll-subpage-log": "Logs",
 	"securepoll-tally-title": "Tally: $1",
 	"securepoll-tally-not-finished": "Sorry, you cannot tally the election until after voting is complete.",
-	"securepoll-tally-form-file-help": "If you upload an encrypted dump, its contents will be tallied. Otherwise the results in the database will be tallied.",
+	"securepoll-tally-form-file-help": "If you uploaded an encrypted dump, its contents will be tallied. Otherwise the results in the database will be tallied. NOTE: Uploading an election with more than 100 votes might not give any results and lead to a timeout.",
 	"securepoll-tally-form-file-label": "Upload encrypted dump (optional)",
 	"securepoll-tally-upload-submit": "Create tally",
 	"securepoll-tally-gpg-decrypt-key": "GPG decryption key",
@@ -124,7 +124,6 @@
 	"securepoll-tally-upload-error": "Error tallying dump file: $1",
 	"securepoll-tally-ongoing": "This election is currently being (re-)tallied. Please check back later for the results.",
 	"securepoll-tally-result-error": "Tally failed with error: $1",
-	"securepoll-tally-timeout-warning": "If you uploaded an encrypted dump, its contents will be tallied. Otherwise the results in the database will be tallied. NOTE: Uploading an election with more than a 100 votes might not give any results and lead to a timeout.",
 	"securepoll-tally-result": "<h2>Previous results</h2><p>$1</p><p>(Results from $2)</p>",
 	"securepoll-pairwise-victories": "Pairwise victory matrix",
 	"securepoll-strength-matrix": "Path strength matrix",
