Update error icons for vote and vote list pages
- Updates icon usage in errors and indicators
- Cleans up unneeded errorLocationIndicator use
- Fixes incorrect id passed in PreferentialBallot error indicator

Bug: T277277
Change-Id: I0a67e97c6be268ebdc73b776a395117a1b9efe2e

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -31,6 +31,7 @@
 	"securepoll-no-decryption-key": "No decryption key is configured.\nCannot decrypt.",
 	"securepoll-jump": "Go to the voting server",
 	"securepoll-bad-ballot-submission": "Your vote was invalid: $1",
+	"securepoll-ballot-see-error": "See this warning",
 	"securepoll-unanswered-questions": "You must answer all questions.",
 	"securepoll-invalid-rank": "Invalid rank. You must give candidates a rank between 1 and 999.",
 	"securepoll-unranked-options": "Some options were not ranked.\nYou must give all options a rank between 1 and 999.",
@@ -65,6 +66,8 @@
 	"securepoll-header-cookie-dup": "Dup",
 	"securepoll-header-strike": "Strike",
 	"securepoll-header-details": "Details",
+	"securepoll-vote-duplicate": "Duplicate",
+	"securepoll-vote-csrf": "CSRF",
 	"securepoll-strike-button": "Strike",
 	"securepoll-unstrike-button": "Unstrike",
 	"securepoll-strike-reason": "Reason:",
