--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -53,6 +53,7 @@
 	"securepoll-no-decryption-key": "Used as error message.",
 	"securepoll-jump": "Label of the button than sends the user to the voting wiki.",
 	"securepoll-bad-ballot-submission": "Unused at this time. Parameters:\n* $1 - ...",
+	"securepoll-ballot-see-error": "Button shown when the ballot has an error. Clicking it takes the user to the input that is invalid.",
 	"securepoll-unanswered-questions": "Used as error message.",
 	"securepoll-invalid-rank": "Used as error message.",
 	"securepoll-unranked-options": "Used as error message.",
@@ -87,6 +88,8 @@
 	"securepoll-header-cookie-dup": "Column caption above the table of voters shown at [[Special:SecurePoll/list/1]]. The column displays whether the vote is a duplicate (detected by a cookie). See also {{msg-mw|securepoll-cookie-dup-list}}. This translation should be as short as possible (an abbreviation for \"duplicate\").",
 	"securepoll-header-strike": "\"Strike\" here means to strikeout a vote (slash it) so as to mark is as not being counted. E.g. a user voted a second time; a user was not eligible for voting because of an insufficient edit count; a known sockpuppet was used, and the puppetmaster also voted; a bot user vote, etc.\n{{Identical|Strike}}",
 	"securepoll-header-details": "{{Identical|Detail}}",
+	"securepoll-vote-duplicate": "Shown on vote list page if vote is thought to be a duplicate of another vote",
+	"securepoll-vote-csrf": "CSRF stands for Cross-Site Request Forgery and this is shown when a vote was potentially made by a third party without the listed voter's consent",
 	"securepoll-strike-button": "{{Identical|Strike}}",
 	"securepoll-unstrike-button": "{{Identical|Unstrike}}",
 	"securepoll-strike-reason": "{{Identical|Reason}}",
